# deadline_service

./: .env  .gitignore  .python-version  Justfile  compose.yaml  pyproject.toml
src/app/: config.py  database.py  main.py
src/app/core/: bootstrap.py  lifespan.py
src/app/kafka/: kafka_broker.py
src/app/mappers/: mappers.py
src/app/sqlalchemy_orm_models/: sqlalchemy_orm_task_deadlines_models.py
src/app/task_deadline_repository/: task_deadline_repository.py
src/app/task_deadline_scanning/: task_deadline_scanning.py
src/app/task_schemas/: task_schemas.py
src/app/tasks_deadline/: tasks_deadline.py
src/app/tasks_deadline_service/: tasks_deadline_service.py
