[project]
name = "deadline-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faststream[confluent]>=0.6.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.13.1",
    "wemake-python-styleguide>=1.4.0",
]